<resources>
    <string name="app_name">SchoolScheduler</string>
    <string name="start_fragment_label">start_label</string>
    <string name="edit_button_text">Edit</string>
    <string name="general_plan_button_string">GENERAL PLAN</string>
    <string name="days_plan_button_string">DAYS</string>
    <string name="today_button_string">TODAY</string>
    <string name="tomorrow_button_string">TOMORROW</string>
    <string name="title_string">SchoolScheduler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="hours">Hours</string>
    <string name="day">Day</string>
    <string name="add">ADD</string>
    <string name="deleted_lesson">Lesson deleted!</string>
    <string name="undo">Undo</string>
    <string name="enter_name_of_new_equipment_item">Enter name of new equipment item</string>
</resources>