<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data class="StartFragmentBinding">

</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:clickable="false"
        tools:context=".Start.StartFragment">

        <Button
            android:id="@+id/days_button"
            style="@style/start_buttons"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/days_plan_button_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/general_plan_button" />

        <Button
            android:id="@+id/general_plan_button"
            style="@style/start_buttons"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/general_plan_button_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tomorrow_button" />

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_64"
            android:layout_marginEnd="@dimen/margin_64"
            android:clickable="false"
            android:text="@string/title_string"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.176" />

        <Button
            android:id="@+id/today_button"
            style="@style/start_buttons"
            android:layout_width="283dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:text="@string/today_button_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <Button
            android:id="@+id/tomorrow_button"
            style="@style/start_buttons"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tomorrow_button_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/today_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>